# effective-tribble

./: .gitignore  README.md  pyproject.toml  requirements.txt
zadanie1/: xkom.postman_collection.json
zadanie1/xkom/xkom/: items.py  middlewares.py  pipelines.py  settings.py
zadanie1/xkom/xkom/spiders/: xkomapi.py
zadanie2/: Notebook_zad2.ipynb  c.csv
zadanie3/: Notebook_zad3.ipynb  similarity_with_text.csv  vectors.csv
